--- a/environment.yml
+++ b/environment.yml
@@ -47,7 +47,7 @@ dependencies:
   - libhwloc=2.11.2=default_h0d58e46_1001
   - libiconv=1.17=hd590300_2
   - libjpeg-turbo=3.0.0=hd590300_1
-  - liblzma=5.6.3=hb9d3cd8_1
+  - liblzma=5.6.3
   - libnsl=2.0.1=hd590300_0
   - libopenvino=2024.5.0=hac27bb2_0
   - libopenvino-auto-batch-plugin=2024.5.0=h4d9b6c2_0
@@ -111,7 +111,6 @@ dependencies:
   - xorg-libxext=1.3.6=hb9d3cd8_0
   - xorg-libxfixes=6.0.1=hb9d3cd8_0
   - xorg-libxrender=0.9.12=hb9d3cd8_0
-  - xz=5.4.6=h5eee18b_1
   - zlib=1.3.1=hb9d3cd8_2
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
